# mitsuba-im

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/cmake/: FindEigen.cmake  MitsubaBuildOptions.cmake  MitsubaExternal.cmake  MitsubaUtil.cmake  MtsGetVersionInfo.cmake  PCHTargets.cmake
data/cmake/CMakePCHCompiler/: CMakePCHCompiler.cmake
data/cmake/packaging/: CMakeLists.txt  MtsFixupBundle.cmake.in
data/pch/: mitsuba_precompiled.hpp
data/schema/: CMakeLists.txt  scene.xsd  upgrade.html
data/windows/Qt/Qt5/: Qt5ModuleLocation.cmake
data/windows/Qt/Qt5Core/: Qt5CoreConfig.cmake  Qt5CoreConfigExtras.cmake
data/windows/Qt/Qt5Gui/: Qt5GuiConfig.cmake
data/windows/Qt/Qt5Network/: Qt5NetworkConfig.cmake
data/windows/Qt/Qt5OpenGL/: Qt5OpenGLConfig.cmake
data/windows/Qt/Qt5Widgets/: Qt5WidgetsConfig.cmake
data/windows/Qt/Qt5Xml/: Qt5XmlConfig.cmake
data/windows/Qt/Qt5XmlPatterns/: Qt5XmlPatternsConfig.cmake
include/mitsuba/: mitsuba.h
include/mitsuba/bidir/: mut_bidir.h  mutator.h  rsampler.h
include/mitsuba/core/: atomic.h  autodiff.h  bitmap.h  brent.h  chisquare.h  class.h  cobject.h  filesystem.h  fresolver.h  fstream.h  fwd.h  getopt.h  half.h  kdtree.h  lock.h  logger.h  lrucache.h  matrix.h  mmap.h  octree.h  platform.h  plugin.h  properties.h  quad.h  rfilter.h  sched.h  spectrum.h  sshstream.h  thread.h  tls.h  util.h  vector.h
include/mitsuba/hw/: basicshader.h  glrenderer.h  gpuprogram.h  viewer.h
include/mitsuba/render/: basictexture.h  film.h  font.h  fwd.h  gkdtree.h  imageblock.h  integrator.h  integrator2.h  mipmap.h  renderjob.h  sampler.h  scene.h  scenehandler.h  sceneloader.h  trimesh.h  util.h
src/bsdfs/: blendbsdf.cpp  bumpmap.cpp  coating.cpp  conductor.cpp  dielectric.cpp  difftrans.cpp  diffuse.cpp  hk.cpp  ior.h  mask.cpp  microfacet.h  mixturebsdf.cpp  normalmap.cpp  null.cpp  phong.cpp  plastic.cpp  roughcoating.cpp  roughconductor.cpp  roughdielectric.cpp  roughdiffuse.cpp  roughplastic.cpp  rtrans.h  thindielectric.cpp  twosided.cpp  ward.cpp
src/converter/: CMakeLists.txt  collada.cpp  converter.cpp  converter.h  mtsimport.cpp  obj.cpp
src/emitters/: area.cpp  constant.cpp  envmap.cpp  point.cpp  spot.cpp
src/films/: CMakeLists.txt  annotations.h  cnpy.h  hdrfilm.cpp  ldrfilm.cpp  mfilm.cpp  tiledhdrfilm.cpp
src/im-mts/: CMakeLists.txt  configurator.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  mitsuba.cpp  preview_opengl2.cpp  scene.cpp  shell.cpp  shell.h
src/integrators/: CMakeLists.txt  mark_integrator.cpp  mark_integrator2.cpp
src/integrators/bdpt/: bdpt.cpp  bdpt_proc.cpp  bdpt_proc.h  bdpt_wr.cpp  bdpt_wr.h
src/integrators/erpt/: erpt.cpp  erpt.h  erpt_proc.cpp  erpt_proc.h
src/integrators/misc/: adaptive.cpp  field.cpp  motion.cpp
src/integrators/mlt/: mlt.cpp  mlt.h  mlt_proc.cpp  mlt_proc.h
src/integrators/photonmapper/: photonmapper.cpp  ppm.cpp  sppm.cpp
src/integrators/pssmlt/: pssmlt.cpp  pssmlt.h  pssmlt_proc.cpp  pssmlt_proc.h  pssmlt_sampler.h
src/integrators/ptracer/: ptracer_proc.cpp
src/libbidir/: common.cpp  edge.cpp  manifold.cpp  mut_bidir.cpp  mut_manifold.cpp  pathsampler.cpp  rsampler.cpp  vertex.cpp
src/libcore/: CMakeLists.txt  appender.cpp  bitmap.cpp  brent.cpp  chisquare.cpp  fmtconv.cpp  formatter.cpp  fresolver.cpp  fstream.cpp  lock.cpp  logger.cpp  mmap.cpp  plugin.cpp  properties.cpp  quad.cpp  random.cpp  rfilter.cpp  sched.cpp  shvector.cpp  spectrum.cpp  thread.cpp  tls.cpp  track.cpp  util.cpp  vmf.cpp
src/libhw/: CMakeLists.txt  basicshader.cpp  font.cpp  glrenderer.cpp  gpuprogram.cpp  nsgldevice.mm
src/libpython/: CMakeLists.txt
src/librender/: CMakeLists.txt  basictexture.cpp  film.cpp  font.cpp  imageblock.cpp  integrator.cpp  renderjob.cpp  sampler.cpp  scene.cpp  scenehandler.cpp  sceneversions.cpp  sensor.cpp  testcase.cpp  trimesh.cpp  util.cpp
src/medium/: heterogeneous.cpp  materials.h
src/mitsuba/: CMakeLists.txt  im_render.cpp  im_render.h  mitsuba.cpp  mtssrv.cpp  mtsutil.cpp
src/mtsgui/: CMakeLists.txt  addserverdlg.cpp  common.h  glwidget.cpp  glwidget.h  importdlg.cpp  importdlg.h  logwidget.cpp  main.cpp  mainwindow.cpp  rendersettingsdlg.cpp  sceneimporter.cpp  sceneimporter.h  sceneloader.cpp  sceneloader.h  server.cpp  upgrade.cpp  upgrade.h
src/phase/: microflake_fiber.h
src/samplers/: halton.cpp  hammersley.cpp  independent.cpp  ldsampler.cpp  sobol.cpp  stratified.cpp
src/sensors/: CMakeLists.txt  mark_sensor.cpp
src/shapes/: hair.cpp  heightfield.cpp  obj.cpp  ply.cpp  serialized.cpp
src/shapes/ply/: ply_parser.cpp  ply_parser.hpp
src/subsurface/: bluenoise.cpp  singlescatter.cpp
src/tests/: test_chisquare.cpp  test_microfacet.cpp  test_quad.cpp  test_rtrans.cpp  test_sh.cpp
src/textures/: bitmap.cpp  checkerboard.cpp  curvature.cpp  gridtexture.cpp  scale.cpp  wireframe.cpp
src/utils/: CMakeLists.txt  addimages.cpp  joinrgb.cpp  kdbench.cpp  rdielprec.cpp  tonemap.cpp
src/volume/: gridvolume.cpp  hgridvolume.cpp  volcache.cpp
